# tagz

./: .gitignore  CONTRIBUTORS.md  Cargo.toml  LICENSE
src/: app_config.rs  config.rs  from_row.rs  lib.rs
src/models/: file.rs  mod.rs  relationships.rs  tag.rs
src/serv/: mod.rs  service_error.rs
src/serv/routes/: mod.rs
src/serv/routes/api/: files.rs  mod.rs  tags.rs
tagz-cg-from-row/: Cargo.toml
tagz-cg-from-row/src/: lib.rs
tagz-cg-serv/: Cargo.toml
tagz-cg-serv/src/: lib.rs
